third_party/move/move-compiler-v2/tests/visibility-checker/v1-typing/module_call_internal.exp

Diagnostics:
error: function `0x2::X::foo` is private to module `0x2::X`
   ┌─ tests/visibility-checker/v1-typing/module_call_internal.move:4:9
   │
 4 │     fun foo() {}
   │         ^^^ called from function `0x2::M::foo`
   ·
10 │         X::foo()
   │         -------- called here
